--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -13,9 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      REGISTRY_NAME: ${{ secrets.REGISTRY_NAME }}
+      REGISTRY_NAME: flixtube2024
       REGISTRY_URL: ${{ secrets.REGISTRY_URL }}
-      AKS_CLUSTER_NAME: ${{ secrets.AKS_CLUSTER_NAME }}
+      AKS_CLUSTER_NAME: flixtube2024
+      IMAGE_NAME: flixtube
 
 
   #Step 1: Checkout repository
@@ -34,25 +35,25 @@ jobs:
       run: |
         az acr login --name ${{ env.REGISTRY_NAME }}
 
-  # Step 5: Build Docker image
+  # Step 4: Build Docker image
     - name: Build Docker image
       run: |
-        docker build -t ${{ env.REGISTRY_URL }}/myapp:${{ github.sha }} .
+        docker build -t ${{ env.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ github.sha }} .
 
-    # Step 6: Push Docker image to ACR
+  # Step 5: Push Docker image to ACR
     - name: Push Docker image to ACR
       run: |
-        docker push ${{ env.REGISTRY_URL }}/myapp:${{ github.sha }}
+        docker push ${{ env.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
     
-    #step:
+  #step 6: Set context for AKS
     - uses: azure/aks-set-context@v3
       with:
         resource-group: 'deakinuni'
-        cluster-name: '${{ secrets.AKS_CLUSTER_NAME }}'
+        cluster-name: '${{ env.AKS_CLUSTER_NAME }}'
 
-
+  #step 7: Deploy to AKS
     - uses: Azure/k8s-deploy@v5
       with:
         manifests: |
           scripts/deploy.yaml
-        images: '${{ env.REGISTRY_URL }}/myapp:${{ github.sha }}'
+        images: '${{ env.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:${{ github.sha }}'
